[tool.poetry]
name = "defisheye"
version = "0.0.1"
description = "remove fisheye effect from pictures"
authors = ["Pixidream <developer@studiopixidream.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22"
opencv-python = "^4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
